# zap-rs

./: Cargo.toml  zap.db
client/: Cargo.toml
server/: Cargo.toml
zapd/: Cargo.toml
zapd/src/: config.rs  db.rs  main.rs
