[package]
name = "zapd"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

serde = { version = "1.0.146", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.*"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "json", "sqlite" ] }
